Support Test Spec

--- a/component.yaml
+++ b/component.yaml
@@ -73,6 +73,22 @@ inputs:
   isRequired: false
   title: AWS Test Upload File Path
   description: The file path for the test upload.
+- key: "AWS_TEST_SPEC_ARN"
+  isRequired: false
+  title: AWS Test Spec Arn
+  description: The ARN of the uploaded test spec to be run.
+- key: "AWS_TEST_SPEC_UPLOAD_FILE_NAME"
+  isRequired: false
+  title: AWS Test Spec Upload File Name
+  description: The test spec file to be uploaded.
+- key: "AWS_TEST_SPEC_UPLOAD_TYPE"
+  isRequired: false
+  title: AWS Test Spec Upload Type
+  description: The upload type of the test spec.
+- key: "AWS_TEST_SPEC_UPLOAD_FILE_PATH"
+  isRequired: false
+  title: AWS Test Spec Upload File Path
+  description: The file path for the test spec upload.
 processFilename: ruby
 processArguments: '%AC_STEP_TEMP%/main.rb'
 files:
