--- a/component.yaml
+++ b/component.yaml
@@ -39,7 +39,7 @@ inputs:
   description: Time out duration (seconds) for the test file upload. The step is skipped if the time out is reached.
 - key: "AWS_TEST_TIMEOUT"
   isRequired: true
-  title: Maximum Waiting Time for Test Results
+  title: Maximum Waiting Time for Run Test Results
   description: Time out duration (seconds) for the AWS Device Farm run. The step is skipped if this duration is reached, but the test execution continues in AWS Device Farm.
 - key: "AWS_APP_ARN"
   isRequired: false
